# GrfEditorPy

./: .gitignore  CLAUDE.md  Makefile  README.md  build.sh  grfeditorpy.desktop  grfeditorpy.spec  main.py  pyproject.toml
grfeditorpy/: __main__.py
grfeditorpy/core/: compression.py  encoding.py  file_entry.py  file_table.py  grf_container.py  grf_header.py
grfeditorpy/formats/: act.py  lub.py  pal.py  spr.py  tga.py
grfeditorpy/services/: extract_service.py  preview_service.py  recent_files.py
grfeditorpy/ui/: file_list.py  folder_tree.py  main_window.py
grfeditorpy/ui/dialogs/: extract_dialog.py  properties_dialog.py
grfeditorpy/ui/preview/: act_preview.py  hex_preview.py  image_preview.py  preview_panel.py  spr_preview.py  text_preview.py
tests/: test_grf_container.py
