[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "grfeditorpy"
version = "0.1.0"
description = "Cross-platform GRF container editor"
requires-python = ">=3.10"
dependencies = ["PySide6>=6.6.0", "Pillow>=10.0.0"]

[project.scripts]
grfeditorpy = "grfeditorpy.__main__:main"
